select 2 long text overflow issue fix

--- a/resources/assets/sass/component/_select2.scss
+++ b/resources/assets/sass/component/_select2.scss
@@ -22,12 +22,13 @@
     }
 
     .select2-selection__rendered {
-      display: block;
       padding-right: 20px;
       padding-left: 8px;
       overflow: hidden;
-      white-space: nowrap;
       text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
     }
   }
 }
